# onion-cnn

./: .gitignore  README.md  app.py  calc_mean_std.ipynb  model_weights.pth  onion.ipynb  pyproject.toml  resize_dataset.py
onion/: app.py  dataset.py  model.py  predict.py  train.py
web/src/: App.css  App.jsx
